# ittap

./: .gitignore  Makefile  README.md  config.toml  main.py  pyproject.toml
phone_picture_backup/: main.py
