[tool.poetry]
name = "phone-picture-backup"
version = "0.1.0"
description = ""
authors = ["Joakim Weckman <joakim.weckman@gmail.com>"]
readme = "README.md"
packages = [{include = "phone_picture_backup"}]
include = [
  "phone_picture_backup/azure.tcl",
  "phone_picture_backup/themes"
]

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9.0.post0"

[tool.poetry.scripts]
phone-picture-backup = "phone_picture_backup.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
